@@ -193,11 +193,16 @@
                 <version>3.11.0</version>
 
                 <configuration>
-                    <release>${java.version}</release>
                     <fork>true</fork>
                     <executable>${jlink.jdk.path}${file.separator}bin${file.separator}javac</executable>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.crypto.cryptoki</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
